assignment3/part2/url-deployment.yaml
apiVersion: apps/v1
# Deploy the url-shortener service
kind: Deployment
metadata:
  name: url-deployment
  # set the name of the app
  labels:
    app: url
spec:
# deploy three replicas
  replicas: 3
  selector:
    matchLabels:
      app: url
  template:
    metadata:
      labels:
        app: url
    spec:
    # select the containers to deploy
      containers:
      - name: url
      # use the image we upload in the docker hub
        image: starightedge7/myurl:v1
	# select the port to use
        ports:
        - containerPort: 5000
