assignment3/part2/login-service.yaml
apiVersion: v1
# the service for login
kind: Service
metadata:
  name: login-service
spec:
# select the login deployment
  selector:
    app: login
  ports:
      # port exposed within the cluster
    - port: 5000
      # port the service send requests to
      targetPort: 5000
      # port exposed externally to the clusters
      nodePort: 30006
  type: NodePort
